--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               Example for local file: background-image: url('trufas.jpg');
               Example for online image: background-image: url('https://your-image-host.com/trufas.jpg');
             */
-            background-image: url('https://images.pexels.com/photos/7627416/pexels-photo-7627416.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+            background-image: url('trufas.jpg');
             background-size: cover;
             background-position: center;
             color: white;
